# zacpoonen-commentary-api

./: .gitignore  README.md  build.sh  build_commands.sh  pyproject.toml  requirements.txt  vercel.json
api/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
api/commentary/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/commentary/management/commands/: import_commentaries.py  populate_books.py  setup_app.py
api/commentary/migrations/: 0001_initial.py  0002_book_commentary_migration.py  0003_alter_book_id.py  0004_alter_commentary_verse.py
api/commentary/templates/admin/: import_commentaries.html
api/commentary/templates/admin/commentary/: change_list.html
