[tool.poetry]
name = "zac-poonen-commentary-api"
version = "0.1.0"
description = "API for Zac Poonen Bible Commentary"
authors = ["Chetan <chetan@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.0"
djangorestframework = "^3.16"
dj-database-url = "^2.0"
python-dotenv = "^1.0"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
